fix adjusting collapse

--- a/Lexicon-LMS/Content/collapsestyle.css
+++ b/Lexicon-LMS/Content/collapsestyle.css
@@ -1,3 +1,3 @@
 ﻿.far-right {
-   margin-left:20px;
+   float:right;
 }
